--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://koatgiyrawewuowxjxr.supabase.co;">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/lovable-uploads/4db86d95-a95b-4027-a4b8-0ef0dbf7a9bb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
@@ -9,21 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="WordLens" />
-    
-    <!-- Content Security Policy for production -->
-    <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' https://cdn.gpteng.co;
-      style-src 'self' 'unsafe-inline';
-      img-src 'self' data: blob:;
-      font-src 'self';
-      connect-src 'self';
-      worker-src 'self';
-      object-src 'none';
-      base-uri 'self';
-      form-action 'self';
-      frame-ancestors 'none';
-    ">
+
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="WordLens Insight Engine - Analyze documents for meaningful themes like respect, inclusion, and diversity. Upload documents and get instant keyword analysis and insights." />
